Don't include .xtendbin files in repo

--- a/xtext/.gitignore
+++ b/xtext/.gitignore
@@ -101,6 +101,7 @@ hs_err_pid*
 generated/
 src-gen/
 xtend-gen/
+*.xtendbin
 
 # Ignore plugin.xml_gen and feature.xml_gen files, when build Eclipse Plugins.
 *.xml_gen
