Added library capability and project wizard

--- a/xtext/dk.sdu.mmmi.mdsd.iot_dsl/build.properties
+++ b/xtext/dk.sdu.mmmi.mdsd.iot_dsl/build.properties
@@ -1,10 +1,12 @@
 source.. = src/,\
            src-gen/,\
-           xtend-gen/
+           xtend-gen/,\
+           IoTDSLLib/
 bin.includes = model/generated/,\
                .,\
                META-INF/,\
-               plugin.xml
+               plugin.xml,\
+               IoTDSLLib/
 bin.excludes = **/*.mwe2,\
                **/*.xtend
 additional.bundles = org.eclipse.xtext.xbase,\
@@ -18,3 +20,4 @@ additional.bundles = org.eclipse.xtext.xbase,\
                      org.apache.commons.logging,\
                      org.apache.log4j,\
                      com.ibm.icu
+output.. = bin/
