--- a/xtext/dk.sdu.mmmi.mdsd.iot_dsl.ui/plugin.xml
+++ b/xtext/dk.sdu.mmmi.mdsd.iot_dsl.ui/plugin.xml
@@ -431,4 +431,33 @@
 			type="text">
 		</fileTypes>
 	</extension>
+	<extension
+		point="org.eclipse.ui.newWizards">
+		<category id="dk.sdu.mmmi.mdsd.iot_dsl.ui.category" name="IoTDSL">
+		</category>
+		<wizard
+			category="dk.sdu.mmmi.mdsd.iot_dsl.ui.category"
+			class="dk.sdu.mmmi.mdsd.iot_dsl.ui.IoTDSLExecutableExtensionFactory:org.eclipse.xtext.ui.wizard.template.TemplateNewProjectWizard"
+			id="dk.sdu.mmmi.mdsd.iot_dsl.ui.wizard.IoTDSLNewProjectWizard"
+			name="IoTDSL Project"
+			icon="icons/new_IoTDSL_proj.gif"
+			project="true">
+		</wizard>
+	</extension>
+	<extension
+		point="org.eclipse.xtext.ui.projectTemplate">
+		<projectTemplateProvider
+			class="dk.sdu.mmmi.mdsd.iot_dsl.ui.IoTDSLExecutableExtensionFactory:dk.sdu.mmmi.mdsd.iot_dsl.ui.wizard.IoTDSLProjectTemplateProvider"
+			grammarName="dk.sdu.mmmi.mdsd.iot_dsl.IoTDSL">
+		</projectTemplateProvider>
+	</extension>
+	<extension
+		point="org.eclipse.ui.perspectiveExtensions">
+		<perspectiveExtension targetID="org.eclipse.ui.resourcePerspective">
+			<newWizardShortcut id="dk.sdu.mmmi.mdsd.iot_dsl.ui.wizard.IoTDSLNewProjectWizard"/>
+		</perspectiveExtension>
+		<perspectiveExtension targetID="org.eclipse.jdt.ui.JavaPerspective">
+			<newWizardShortcut id="dk.sdu.mmmi.mdsd.iot_dsl.ui.wizard.IoTDSLNewProjectWizard"/>
+		</perspectiveExtension>
+	</extension>
 </plugin>
